# C-2048

./: .gitignore  CMakeLists.txt  main  main.c
edgeDetection/: edgeDetection.c  nextMove.c  nextMove.h
gameLoop/: gameLoop.c  gameLoop.h
screen/: clearScreen.c  clearScreen.h  drawScreen.c  drawScreen.h
takeInput/: takeInput.c  takeInput.h
testing/: mainTest.c
utils/: utils.c  utils.h
